data/derived/comb/progs/unify/prog0276.ml.out
Characters 154-217:
  in bigAdd (mulByDigit i (List.rev (List.map (fun x -> x*10) t ) ));;
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int list -> int list
       but an expression was expected of type int list
